--- a/app/views/product_categories/new.html.erb
+++ b/app/views/product_categories/new.html.erb
@@ -1,4 +1,4 @@
-<% semantic_form_for(@product_category) do |f| %>
+<% simple_form_for(@product_category) do |f| %>
   <%= f.inputs :name %>
   <%= f.buttons %>
 <% end %>
