--- a/app/views/suppliers/new.html.erb
+++ b/app/views/suppliers/new.html.erb
@@ -12,7 +12,7 @@
 <div class="tabcontainer">
 
 <div id="sc1" class="tabcontent">
-<% semantic_form_for @supplier do |f| %>
+<% simple_form_for @supplier do |f| %>
               <% f.inputs do %>
                 <%= f.input :company_name, :label =>(t "supplier.company_name"), :input_html => {:size => 50} %>
                 <%= f.input :website, :label =>(t "supplier.website"), :input_html => {:size => 50} %>
@@ -32,7 +32,7 @@
         <%= f.buttons %>
   <% end %>
     </div><div id="sc2" class="tabcontent">
-<% semantic_form_for @supplier do |f| %>
+<% simple_form_for @supplier do |f| %>
               <% f.inputs do %>
                 <%= f.input :credit_terms, :label => (t "supplier.credit_terms"), :input_html => {:size => 30} %>
                 <%= f.input :credit_amount, :label => (t "supplier.credit_amount"), :input_html => {:size => 30} %>
