--- a/app/views/work_orders/close.html.erb
+++ b/app/views/work_orders/close.html.erb
@@ -12,7 +12,7 @@
 
 <div id="sc2" class="tabcontent">
 
-<% semantic_form_for(@work_order) do |f| %>
+<% simple_form_for(@work_order) do |f| %>
       <% f.inputs do %>
         <%= f.input :resolution, :label => (t "workorder.resolution") %>
         <%= f.input :closed, :label => (t "workorder.details") %>
