Making some changes to simple form layout. Still not getting inline errors to appear

--- a/app/views/product_categories/new.html.erb
+++ b/app/views/product_categories/new.html.erb
@@ -1,6 +1,6 @@
 <% simple_form_for(@product_category) do |f| %>
   <%= f.inputs :name %>
-  <%= f.buttons %>
+  <%= f.submit t "global.create" %>
 <% end %>
 <h1 align="center"><%= t "product_cat.t_list" %></h1>
 <p>
