--- a/public/stylesheets/application.css
+++ b/public/stylesheets/application.css
@@ -224,50 +224,68 @@ fieldset.settings label { display: block; }
 .priority_4 { /*background-color: #ff9999;*/ font-weight:bold; text-transform:uppercase; border-collapse:collapse;}
 .priority_4 { /*background-color: #cc0033;*/ font-weight:bold; text-transform:uppercase; border-collapse:collapse;}
 
-/*Simple Form CSS Values BOC*/
-.simple_form label {
-float: left;
-width: 20%;
-text-align: right;
-margin: 2px 10px;
-}
-.simple_form div.input {
-margin-bottom: 10px;
+/* ----- SimpleForm Styles ----- */
 
+.simple_form div.input {
+  margin-bottom: 10px;
 }
-.simple_form div.boolean, .simple_form input[type='submit'] {
-margin-left: 120px;
+
+.simple_form label {
+  float: left;
+  width: 100px;
+  text-align: right;
+  margin: 2px 10px;
 }
-.simple_form div.boolean label {
-float: none;
-margin: 0;
+
+div.boolean, .simple_form input[type='submit'] {
+  margin-left: 120px;
 }
-.simple_form div.boolean label, .simple_form label.collection_check_boxes {
+
+div.boolean label, label.collection_radio {
   float: none;
   margin: 0;
 }
 
-.simple_form label.collection_check_boxes {
+label.collection_radio {
   margin-right: 10px;
-  margin-left: 2px;
-  display:table-row;
-  text-align:left;
+  vertical-align: -2px;
+  margin-left:   2px;
 }
+
+.field_with_errors {
+  background-color: #ff3333;
+}
+
 .simple_form .error {
-  clear: left;
-  margin-left: 260px;
-  font-size: 12px;
-  text-transform:capitalize;
-  color: #D00;
+  clear:   left;
+  color:   black;
   display: block;
+  margin-left: 120px;
+  font-size:    12px;
 }
 
 .simple_form .hint {
   clear: left;
-  margin-left: 260px;
-  font-size: 12px;
+  margin-left: 120px;
+  font-size:    12px;
   color: #555;
   display: block;
   font-style: italic;
 }
-/* Simple Form CSS Values EOC*/
+
+input.radio {
+  margin-right: 5px;
+  vertical-align: -3px;
+}
+
+input.check_boxes {
+  margin-left: 3px;
+  vertical-align: -3px;
+}
+
+label.collection_check_boxes {
+  float: none;
+  margin: 0;
+  vertical-align: -2px;
+  margin-left:   2px;
+}
