myitcrm2-REFS#207: Remove Formtastic and replace with simple form

--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -44,7 +44,7 @@
     <% if permitted_to? :destroy, @user %>
         <div id="sc2" class="tabcontent">
             <%= simple_form_for(@user) do |f| %>
-                  <%= f.input :roles, :as => :check_boxes, :collection => User::ROLES, :label => (t "global.role") %><br>
+                  <%= f.input :roles, :as => :radio, :collection => User::ROLES, :label => (t "global.role") %><br>
              <%= f.button :submit %>
               <% if current_user == nil %>
                   <%= hidden_field_tag "user[created_by]", @user.username %>
