REFS #208: Update to JQuery JS Library

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
-<html lang="en" xml:lang="en" xmlns="http://www.w3.org/1999/xhtml">
+<html>
 <head>
   <title><%= Setting::business_name %>-<%= @title || "" %></title>
   <meta name="keywords" content="<%= Setting::meta_tags %>" />
   <%= csrf_meta_tag %>
 
-  <%= stylesheet_link_tag 'application', 'ddtabmenu', 'jstoolbar', :cache => "base" %>
-  <%= javascript_include_tag :all %>
+  <%= stylesheet_link_tag 'application', 'ddtabmenu', 'jstoolbar' %>
+  <%= javascript_include_tag 'jquery-1.5.1.min','rails', 'application' %>
   <script type="text/javascript">
     ddtabmenu.definemenu("ddtabs1", 0 ) //initialize Tab Menu with ID "ddtabs1" and select 1st tab by default
   </script>
