REFS #200: Updating to Rails 3

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -6,7 +6,7 @@
   <%= csrf_meta_tag %>
 
   <%= stylesheet_link_tag 'application', 'ddtabmenu', 'jstoolbar' %>
-  <%= javascript_include_tag 'jquery-1.5.1.min','rails', 'application' %>
+  <%= javascript_include_tag 'jquery-1.5.1.min', 'jstoolbar/jstoolbar' ,'rails', 'application' %>
   <script type="text/javascript">
     ddtabmenu.definemenu("ddtabs1", 0 ) //initialize Tab Menu with ID "ddtabs1" and select 1st tab by default
   </script>
