--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,6 +1,6 @@
 <div id="top_float_left">
 <% if permitted_to? :destroy, User.new %>
-<%= link_to(image_tag("trash.png", :title=> (t "global.delete"),:align => "bottom", :hspace => "2"), :confirm => 'Are you sure?',  :action => :destroy )%><%= link_to (t "global.delete"), @user, :confirm => 'Are you sure?', :method => :delete %>&nbsp;&nbsp;
+<%= link_to(image_tag("delete.png", :title=> (t "global.delete"),:align => "bottom", :hspace => "2"), :confirm => 'Are you sure?',  :action => :destroy )%><%= link_to (t "global.delete"), @user, :confirm => 'Are you sure?', :method => :delete %>&nbsp;&nbsp;
 <% end %>
 <% if current_user.roles_mask < @user.roles_mask %>
 <%= link_to(image_tag("edit.png", :title=> (t "global.edit"),:align => "bottom", :hspace => "2"), edit_user_path)%><%= link_to (t "global.edit"), edit_user_path %>&nbsp;&nbsp;
@@ -16,7 +16,7 @@
         <strong><%= t "user.name" %>:</strong>
       </td>
       <td align="left">
-       <%=h @user.name %>
+       <%= @user.name %>
       </td>
   </tr>
   <tr>
@@ -24,7 +24,7 @@
         <strong><%= t "user.username" %>:</strong>
       </td>
       <td align="left">
-       <%=h @user.username %>
+       <%= @user.username %>
       </td>
   </tr>
   <tr>
@@ -40,7 +40,7 @@
         <strong><%= t "global.role" %>:</strong>
       </td>
       <td align="left">
-       <%=h @user.role_symbols %>
+       <%= @user.role_symbols %>
       </td>
   </tr>
   <tr>
@@ -48,7 +48,7 @@
         <strong><%= t "global.active" %>:</strong>
       </td>
       <td align="left">
-       <%=h @user.active %>
+       <%= @user.active %>
       </td>
   </tr>
   <tr>
