--- a/app/views/work_orders/new.html.erb
+++ b/app/views/work_orders/new.html.erb
@@ -16,13 +16,15 @@
         <%= f.input :subject, :label => (t "workorder.subject") %>
         <%= f.association :priority_list, :label => (t "workorder.priority"), :include_blank => false %>
         <%= f.input :assigned_to_username, :as => :select, :collection => User.find(:all, :conditions => "roles_mask < 5 " )  %>
-        <%= f.input :description,:label => (t "global.description"), :input_html => {:rows => 25, :style => "margin-left:26%;"}%>
+        <%= f.input :description, :label => (t "global.description"), :input_html => {:rows => 25, :cols => 80}%>
         <%= f.input :edited_by, :as => :hidden, :input_html => {:value =>  current_user.username} %>
         <%= f.input :created_by, :as => :hidden, :input_html => {:value =>  current_user.username} %>
         <%= f.input :updated_at, :as => :hidden, :input_html => {:value =>  Time.now} %>
 
 <%= f.submit t "global.create"  %>
- <%= textiletoolbar_for('work_order_description') %>
-<% end %>
+ <%=raw textiletoolbar_for('work_order_description') %>
+      <% end %>
+
+
 </div>
 </div>
