Updating to use CanCan - Trying to sort out roles with permissions - Not working yet.

--- a/app/views/permissions/_form.html.erb
+++ b/app/views/permissions/_form.html.erb
@@ -2,6 +2,7 @@
   <%= f.error_notification %>
 
   <div class="inputs">
+    <%= f.association :roles %>
     <%= f.input :action %>
     <%= f.input :subject_class %>
     <%= f.input :subject_id %>
