--- a/app/views/settings/edit.html.erb
+++ b/app/views/settings/edit.html.erb
@@ -3,16 +3,17 @@
 <h1><%= t "settings.t_title" %></h1>
 
 <div id="top_float_left">
-  <%= link_to(image_tag('exit.png', :title => [t "global.close"]), root_url) %>&nbsp;<%= link_to([t "global.close"], root_url) %>
+  <%= link_to(image_tag('exit.png', :title => [t "global.exit"]), root_url) %>&nbsp;<%= link_to([t "global.exit"], root_url) %>
 </div>
+<br/>
 
 <div id="ddtabs1" class="basictab">
   <ul>
     <li><a href="#<%= t "products.tab_menu_basic_name" %>" rel="sc1"><%= (t "products.tab_menu_basic") %></a></li>
-    <li><a href="#<%= t "settings.tab.billing_information_url" %>" rel="sc2"><%= t "settings.tab.billing_information" %></a></li>
-    <li><a href="#<%= t "settings.tab.payment_options_url" %>" rel="sc3"><%= t "settings.tab.payment_options" %></a></li>
-    <li><a href="#<%= t "settings.tab.priority_fields_url" %>" rel="sc4"><%= t "settings.tab.priority_fields_options" %></a></li>
-    <li><a href="#<%= t "settings.tab.localisation_url" %>" rel="sc5"><%= t "settings.tab.localisation_url" %></a></li>
+    <!--<li><a href="#<%= t "settings.tab.billing_information_url" %>" rel="sc2"><%= t "settings.tab.billing_information" %></a></li>-->
+    <!--<li><a href="#<%= t "settings.tab.payment_options_url" %>" rel="sc3"><%= t "settings.tab.payment_options" %></a></li>-->
+    <!--<li><a href="#<%= t "settings.tab.priority_fields_url" %>" rel="sc4"><%= t "settings.tab.priority_fields_options" %></a></li>-->
+    <!--<li><a href="#<%= t "settings.tab.localisation_url" %>" rel="sc5"><%= t "settings.tab.localisation_url" %></a></li>-->
   </ul>
 </div>
 
@@ -20,7 +21,7 @@
 
   <div id="sc1" class="tabcontent">
     <div class="box tabular settings">
-    <% form_tag({:action => 'edit'}) do %>
+    <%= form_tag({:action => 'edit'}) do %>
         <p><%= setting_text_field(:business_name, :size => 40)%></p>
         <p><%= setting_text_field(:business_slogan, :size => 80)%></p>
         <p><%= setting_text_field(:business_phone, :size => 20)%></p>
@@ -29,10 +30,11 @@
         <p><%= setting_text_field(:business_mobile, :size => 20)%></p>
         <p><%= setting_text_field(:business_email, :size => 50)%></p>
         <p><%= setting_text_area(:business_address, :cols => 10 , :rows => 5 )%></p>
-        
+
         <%= submit_tag "Save" %>
     <% end %>
     </div>
+
   </div>
 
   <div id="sc2" class="tabcontent">
