--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -1,12 +1,13 @@
-<% if current_user.roles_mask < @user.roles_mask or current_user.id == @user.id %>
-    <%= render :partial => 'actions' %>
-    <% end %>
+
+<%= render :partial => 'actions' %>
+
 
  <div id="show_view">
 <%= simple_form_for(@user) do |f| %>
-    <%= f.input :username , :label => (t "user.username") %>
-    <%= f.input :name , :hint =>(t "user.name_eg"), :label =>(t "user.name") %>
-    <%= f.input :password,:input_html => {:autocomplete => 'off'}, :required => true , :label => (t "user.password") %>
+   <%= f.error_notification %>
+   <%= f.input :username , :label => (t "user.username") %>
+   <%= f.input :name , :hint =>(t "user.name_eg"), :label =>(t "user.name") %>
+   <%= f.input :password,:input_html => {:autocomplete => 'off'}, :required => true , :label => (t "user.password") %>
    <%= f.input :password_confirmation, :input_html => {:autocomplete => 'off'}, :label => (t "user.password_confirmation"), :required => true %>
    <%= f.input :email, :label => (t "global.email") %>
    <%= f.input :address, :input_html => {:rows => 5}, :label => (t "global.address") %>
@@ -17,17 +18,9 @@
    <%= f.input :mobile, :input_html => {:size => 30}, :label => (t "global.mobile") %>
    <%= f.input :fax, :input_html => {:size => 30}, :label => (t "global.fax") %>
    <%= f.input :notes, :input_html => {:rows => 15}, :label => (t "global.notes") %>
-        <% if permitted_to? :destroy, @user %>
-            <%= f.input :roles,:label => (t "global.role") , :as => :check_boxes, :collection => User::ROLES, :label => (t "global.role") %>
-         <% end %>
-
-   <%= f.submit %>
-<p>
+   <%= f.association :roles %>
    <%= hidden_field_tag "user[edited_at]", Time.now %>
    <%= hidden_field_tag "user[edited_by]", current_user.username %>
-
-</p>
-<p>
-  </p>
+<%= f.submit %>
 <% end %>
 </div>
