--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -28,26 +28,18 @@
       <%= f.input :phone, :input_html => {:size => 30}, :label => (t "global.phone") %>
       <%= f.input :mobile, :input_html => {:size => 30}, :label => (t "global.mobile") %>
       <%= f.input :fax, :input_html => {:size => 30}, :label => (t "global.fax") %>
-      <%= f.button :submit %>
-
-            <% if current_user == nil %>
-                <%= hidden_field_tag "user[created_by]", "SELF" %>
-            <% else %>
-                <%= hidden_field_tag "user[created_by]", current_user.username %>
-            <% end %>
-
-
+      <%= hidden_field_tag "user[created_by]", "SELF" %>
+      <%= hidden_field_tag "user[created_by]", current_user.username %>
+      <%= f.submit :submit %>
     <% end %>
     </div>
         <div id="sc2" class="tabcontent">
             <%= simple_form_for(@user) do |f| %>
-             <%= f.association :roles, :as => :radio, :label => (t "global.role") %><br>
+             <%= f.association :role, :as => :radio, :label => (t "global.role") %><br>
              <%= f.button :submit %>
-              <% if current_user == nil %>
-                  <%= hidden_field_tag "user[created_by]", @user.username %>
-              <% else %>
-                  <%= hidden_field_tag "user[created_by]", current_user.username %>
-              <% end %>
+             <%= hidden_field_tag "user[created_by]", @user.username %>
+             <%= hidden_field_tag "user[created_by]", current_user.username %>
+
             <% end %>
         </div>
   </div>
