--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -24,7 +24,7 @@
     <td><%= user.name %></td>
     <td><%= user.username %></td>
     <td><%= auto_link_email_addresses( user.email ).html_safe %></td>
-    <td><%= user.position.title %></td>
+    <td><%= user.role.title %></td>
     <td><%= user.phone %></td>
     <td><%= user.mobile %></td>
     <td><%= user.active %></td>
