--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -6,7 +6,6 @@
 <div id="ddtabs1" class="basictab">
   <ul>
     <li><a href="#<%= t "products.tab_menu_basic_name" %>" rel="sc1"><%= (t "products.tab_menu_basic") %></a></li>
-    <li><a href="#<%= t "users.tab.user_type_url" %>" rel="sc2"><%= (t "users.tab.user_type") %></a></li>
 
   </ul>
 </div>
@@ -28,17 +27,25 @@
       <%= f.input :phone, :input_html => {:size => 30}, :label => (t "global.phone") %>
       <%= f.input :mobile, :input_html => {:size => 30}, :label => (t "global.mobile") %>
       <%= f.input :fax, :input_html => {:size => 30}, :label => (t "global.fax") %>
-      <%= hidden_field_tag "user[created_by]", "SELF" %>
+        <% if current_user == nil %>
+            <%= hidden_field_tag "user[created_by]", "SELF" %>
+            <% else %>
       <%= hidden_field_tag "user[created_by]", current_user.username %>
-      <%= f.submit :submit %>
+            <% end %>
+        <!--myTODO: Add permission control and before filter-->
+        <%= f.association :role %><br>
+
+
+          <%= f.button :submit %>
+
+
+
     <% end %>
     </div>
         <div id="sc2" class="tabcontent">
             <%= simple_form_for(@user) do |f| %>
-             <%= f.association :role, :as => :radio, :label => (t "global.role") %><br>
+
              <%= f.button :submit %>
-             <%= hidden_field_tag "user[created_by]", @user.username %>
-             <%= hidden_field_tag "user[created_by]", current_user.username %>
 
             <% end %>
         </div>
