--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -18,7 +18,13 @@
    <%= f.input :mobile, :input_html => {:size => 30}, :label => (t "global.mobile") %>
    <%= f.input :fax, :input_html => {:size => 30}, :label => (t "global.fax") %>
    <%= f.input :notes, :input_html => {:rows => 15}, :label => (t "global.notes") %>
-   <%= f.association :role %>
+   <% if can? :manage, :all %>
+   <div class="input">
+     <label class="string optional" for="user_role">Role</label>
+     <%= f.collection_select :role,  User::ROLES, :to_s, :humanize %>
+   </div>
+   <% end %>
+
    <%= hidden_field_tag "user[edited_at]", Time.now %>
    <%= hidden_field_tag "user[edited_by]", current_user.username %>
 <%= f.submit %>
