--- a/app/views/users/edit_profile.html.erb
+++ b/app/views/users/edit_profile.html.erb
@@ -3,7 +3,7 @@
 <div id="ddtabs1" class="basictab">
   <ul>
     <li><a href="#<%= t "products.tab_menu_basic_name" %>" rel="tab1"><%= (t "products.tab_menu_basic") %></a></li>
-    <li><a href="#<%= t "users.tab.user_type" %>" rel="tab2"><%= t "users.tab.user_type" %></a></li>
+    <li><a href="#<%= t "users.tab.contact_info" %>" rel="tab2"><%= t "users.tab.contact_info" %></a></li>
   </ul>
 </div>
 
@@ -12,7 +12,6 @@
   <div id="tab1" class="tabcontent">
 
       <% simple_form_for(@user) do |f| %>
-          <% f.inputs do %>
               <%= f.input :active , :label => (t "global.active") %>
               <%= f.input :username ,:input_html => {:autocomplete => 'off'}, :label => (t "user.username") %>
               <%= f.input :name , :label =>(t "user.name_eg") %>
@@ -20,7 +19,7 @@
               <%= f.input :password_confirmation, :input_html => {:autocomplete => 'off'}, :label => (t "user.password_confirmation"), :required => true %>
               <%= f.input :email, :label => (t "global.email") %>
 
-              <%= f.buttons %>
+              <%= f.submit %>
 
 
               <p>
@@ -33,13 +32,11 @@
               <p>
 
               </p>
-          <% end %>
       <% end %>
     
   </div>
   <div id="tab2" class="tabcontent">
      <% simple_form_for(@user) do |f| %>
-          <% f.inputs do %>
               <%= f.input :address, :input_html => {:rows => 5}, :label => (t "global.address") %>
               <%= f.input :city, :input_html => {:size => 30}, :label => (t "global.city") %>
               <%= f.input :state, :input_html => {:size => 30}, :label => (t "global.state") %>
@@ -48,11 +45,11 @@
               <%= f.input :mobile, :input_html => {:size => 30}, :label => (t "global.mobile") %>
               <%= f.input :fax, :input_html => {:size => 30}, :label => (t "global.fax") %>
               <%= f.input :notes, :input_html => {:rows => 15}, :label => (t "global.notes") %>
-              <% if permitted_to? :destroy, @user %>
+              <% if can? :destroy, @user %>
                   <%= f.input :roles, :as => :check_boxes, :collection => User::ROLES, :label => (t "global.role") %>
               <% end %>
 
-              <%= f.buttons %>
+              <%= f.submit %>
 
 
               <p>
@@ -65,7 +62,6 @@
               <p>
 
               </p>
-          <% end %>
       <% end %>
 
   </div>
