--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -24,7 +24,7 @@
     <td><%= user.name %></td>
     <td><%= user.username %></td>
     <td><%= auto_link_email_addresses( user.email ).html_safe %></td>
-    <td><%= user.role.title %></td>
+    <td style="text-transform:capitalize;"><%= user.role %></td>
     <td><%= user.phone %></td>
     <td><%= user.mobile %></td>
     <td><%= user.active %></td>
@@ -40,6 +40,4 @@
   </tr>
 <% end %>
 </table>
-<!--
- per_page => 5
-<br />Per Page :<%= link_to("1",  :controller => "users", :action => "index",:page =>"1", :per_page => "1") %>-->
+
