--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -36,7 +36,7 @@
         <strong><%= t "global.role" %>:</strong>
       </td>
       <td align="left">
-       <%= @user.role_symbols %>
+       <%= @user.role %>
       </td>
   </tr>
   <tr>
