--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -3,8 +3,8 @@
 <head>
   <title><%= Setting::business_name %>-<%= @title || "" %></title>
   <meta name="keywords" content="<%= Setting::meta_tags %>"/>
-  <%= stylesheet_link_tag 'application', 'ddtabmenu', 'jstoolbar' %>
-  <%= javascript_include_tag 'jquery-1.5.1.min', 'jstoolbar/jstoolbar', 'rails', 'application' %>
+  <%= stylesheet_link_tag 'application', 'ddtabmenu', 'textile-editor' %>
+  <%= javascript_include_tag 'jquery-1.5.1.min', 'textile-editor', 'rails', 'application' %>
   <%= csrf_meta_tag %>
   <script type="text/javascript">
       ddtabmenu.definemenu("ddtabs1", 0) //initialize Tab Menu with ID "ddtabs1" and select 1st tab by default
