--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -2,6 +2,12 @@
   <%= link_to(image_tag('add.png',:title => [t "user.add_new_user"], :align => "bottom", :hspace => "2"), new_user_path) %><%= link_to([t "global.new"], new_user_path) %>
 </div>
 <br/>
+<%= form_tag users_path, :method => 'get' do %>
+   <p><%= t "user.search"  %>
+     <%= text_field_tag :search, params[:search] %>
+     <%= submit_tag (t "global.submit"), :name => nil %>
+    </p>
+    <% end %>
 
 <%= paginate @users  %>
 
@@ -29,14 +35,17 @@
     <td><%= user.mobile %></td>
     <td><%= user.active %></td>
     <td>
-          <%= link_to(image_tag('view.png', :title => [t "global.view"]), user )%> &nbsp;|&nbsp;
-          <%= link_to(image_tag('brick_add.png', :title => [t "global.workorder"]), new_work_order_url, :client_id => user.id, :clients_name => user.username )%>
-       &nbsp;|&nbsp;
-        <%= link_to(image_tag('edit.png', :title => [t "global.edit"]), :controller => "users", :action => "edit", :id => user.id  ) %>&nbsp;|&nbsp;
-
-        <%= link_to(image_tag('delete.png', :title => [t "global.delete"]), user, :confirm => 'Are you sure?', :method => :delete ) %>
-
-          </td>
+          <%= link_to(image_tag('view.png', :title => [t "global.view"]), user )%>
+      <% if can? :create, WorkOrder %>
+          &nbsp;|&nbsp;<%= link_to(image_tag('brick_add.png', :title => [t "global.workorder"]), new_work_order_url )%>
+      <% end %>
+      <% if can? :update, @user %>
+        &nbsp;|&nbsp;<%= link_to(image_tag('edit.png', :title => [t "global.edit"]), :controller => "users", :action => "edit", :id => user.id  ) %>
+        <% end %>
+      <% if can? :destroy, @user %>
+        &nbsp;|&nbsp;<%= link_to(image_tag('delete.png', :title => [t "global.delete"]), user, :confirm => 'Are you sure?', :method => :delete ) %>
+      <% end %>
+    </td>
   </tr>
 <% end %>
 </table>
