Issues around has_many and belongs_to methods in WorkOrder and User modules.

--- a/app/views/work_orders/_assign.html.erb
+++ b/app/views/work_orders/_assign.html.erb
@@ -1,5 +1,5 @@
  <%= form_for @work_order, :url =>{:action => "assign"} do |f| %>
-     <%= f.collection_select(:assigned_to_username, User.find(:all, :conditions => "roles_mask < 5 " ),:id, :name)%>
+     <%= f.collection_select(:assigned_to_username, User.all,:id, :name)%>
      <%= hidden_field_tag(:id, @work_order.id ) %>
      <%= button_to "Assign" %>
 <% end %>
