--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -37,7 +37,7 @@
     <td>
           <%= link_to(image_tag('view.png', :title => [t "global.view"]), user )%>
       <% if can? :create, WorkOrder %>
-          &nbsp;|&nbsp;<%= link_to(image_tag('brick_add.png', :title => [t "global.workorder"]), new_work_order_url )%>
+          &nbsp;|&nbsp;<%= link_to(image_tag('brick_add.png', :title => [t "global.workorder"]), :controller => "work_orders", :action => "new", :client_id => user.id )%>
       <% end %>
       <% if can? :update, @user %>
         &nbsp;|&nbsp;<%= link_to(image_tag('edit.png', :title => [t "global.edit"]), :controller => "users", :action => "edit", :id => user.id  ) %>
