--- a/app/views/work_orders/_new_wo_tab.html.erb
+++ b/app/views/work_orders/_new_wo_tab.html.erb
@@ -4,7 +4,6 @@
     <th><%= "Priority" %></th>
     <th><%= "Client" %></th>
     <th><%= "Subject" %></th>
-    <!--<th><%= "Description" %></th>-->
     <th><%= "Created" %></th>
     <th><%= "Updated" %></th>
     <th><%= "Actions" %></th>
@@ -13,12 +12,11 @@
 <% @new_work_orders.each do |new_wo| %>
   <tr align="left" valign="top" class="priority_main_<%= new_wo.priority_list.id %>">
     <td align="center"><%= link_to(new_wo.id, new_wo) %></td>
-    <td align="center"><%=h new_wo.priority_list.name %></td>
-    <td align="center"><%= link_to(new_wo.user.username, user_path(new_wo.user_id)) %></td>
-    <td><%=h truncate(new_wo.subject, :length => 75) %></td>
-   <!-- <td><%= truncate(RedCloth3.new(new_wo.description).to_html, :length => 90) %></td> -->
-    <td><%=h l new_wo.created_at, :format => :medium %> by <%=h new_wo.created_by %></td>
-    <td><%=h l new_wo.updated_at, :format => :medium %> by <%=h new_wo.created_by %></td>
+    <td align="center"><%= new_wo.priority_list.name %></td>
+    <td align="center"><%= new_wo.user.username %></td>
+    <td><%= truncate(new_wo.subject, :length => 75) %></td>
+    <td><%= l new_wo.created_at, :format => :medium %> by <%=h new_wo.created_by %></td>
+    <td><%= l new_wo.updated_at, :format => :medium %> by <%=h new_wo.created_by %></td>
 
     <td width="120" align="center"><%= link_to(image_tag('view.png', :title => [t "global.view"]), work_order_path(new_wo.id) )%>&nbsp;
         <%= link_to(image_tag('edit.png', :title => [t "global.edit"]), edit_work_order_url(new_wo.id)) %>&nbsp;
