--- a/app/views/products/edit.html.erb
+++ b/app/views/products/edit.html.erb
@@ -15,6 +15,7 @@
 
 <div id="sc1" class="tabcontent">
 <% form_for @product do |f| %>
+                <%= f.error_notification %>
                 <%= f.input :active, :label => (t "global.active")%>
                 <%= f.input :our_sku, :input_html => {:size => 20}, :label => (t "products.our_sku") %>
                 <%= f.input :description, :hint => (t "products.hint_desc"), :label => (t "global.description") %>
@@ -32,29 +33,29 @@
                 <%= f.input :edited_by, :as => :hidden, :input_html => {:value =>  current_user.username} %>
                 <%= f.input :edited_at, :as => :hidden, :input_html => {:value =>  Time.now} %>
 
-       <%= f.button t "global.create" %>
+       <%= f.submit t "global.create" %>
         <% end %>
 </div>
 
 <div id="sc2" class="tabcontent">
 <% simple_form_for @product do |f| %>
-            <% f.inputs do %>
+                <%= f.error_notification %>
                 <%= f.input :stocked_product, :hint => (t "products.stocked") %>
                 <%= f.input :stocking_qty, :input_html => {:size => 20} %>
                 <%= f.input :qty_on_hand, :input_html => {:size => 20} %>
                 <%= f.input :qty_allocated, :input_html => {:size => 20} %>
                 <%= f.input :qty_available, :input_html => {:size => 20} %>
                 <%= f.input :qty_ordered, :input_html => {:size => 20} %>
-          <%= f.input :edited_by, :as => :hidden, :input_html => {:value =>  current_user.username} %>
+                <%= f.input :edited_by, :as => :hidden, :input_html => {:value =>  current_user.username} %>
                 <%= f.input :edited_at, :as => :hidden, :input_html => {:value =>  Time.now} %>
-            <% end %>
-           <%= f.buttons %>
+
+           <%= f.submit %>
         <% end %>
 </div>
 
 <div id="sc3" class="tabcontent">
 <% simple_form_for @product do |f| %>
-            <% f.inputs do %>
+                <%= f.error_notification %>
                 <%= f.input :taxable %>
                 <%= f.input :tax_rate, :hint => (t "products.hint_tax_rate") %>
                 <%= f.input :discountable %>
@@ -62,20 +63,20 @@
                 <%= f.input :disc_percent, :input_html => {:size => 5} %>
                 <%= f.input :edited_by, :as => :hidden, :input_html => {:value =>  current_user.username} %>
                 <%= f.input :edited_at, :as => :hidden, :input_html => {:value =>  Time.now} %>
-            <% end %>
-      <%= f.buttons %>
+
+      <%= f.submit %>
         <% end %>
 </div>
 <div id="sc4" class="tabcontent">
 <% simple_form_for @product do |f| %>
-            <% f.inputs do %>
+                <%= f.error_notification %>
                 <%= f.input :warranty_info, :as => :text, :input_html => {:rows => 15} %>
                 <%= f.input :warranty_length, :input_html => {:size => 20} %>
                 <%= f.input :warranty_unit, :as => :select, :collection => [(t "global.days"), (t "global.months"), (t "global.years")] %>
                 <%= f.input :edited_by, :as => :hidden, :input_html => {:value =>  current_user.username} %>
                 <%= f.input :edited_at, :as => :hidden, :input_html => {:value =>  Time.now} %>
-      <% end %>
-      <%= f.buttons %>
+
+      <%= f.submit %>
         <% end %>
 </div>
 
