--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -1,32 +1,63 @@
-
 <%= render :partial => 'actions' %>
 
-
- <div id="show_view">
-<%= simple_form_for(@user) do |f| %>
-   <%= f.error_notification %>
-   <%= f.input :username , :label => (t "user.username") %>
-   <%= f.input :name , :hint =>(t "user.name_eg"), :label =>(t "user.name") %>
-   <%= f.input :password,:input_html => {:autocomplete => 'off'}, :required => true , :label => (t "user.password") %>
-   <%= f.input :password_confirmation, :input_html => {:autocomplete => 'off'}, :label => (t "user.password_confirmation"), :required => true %>
-   <%= f.input :email, :label => (t "global.email") %>
-   <%= f.input :address, :input_html => {:rows => 5}, :label => (t "global.address") %>
-   <%= f.input :city, :input_html => {:size => 30}, :label => (t "global.city") %>
-   <%= f.input :state, :input_html => {:size => 30}, :label => (t "global.state") %>
-   <%= f.input :zip, :input_html => {:size => 30}, :label => (t "global.zip") %>
-   <%= f.input :phone, :input_html => {:size => 30}, :label => (t "global.phone") %>
-   <%= f.input :mobile, :input_html => {:size => 30}, :label => (t "global.mobile") %>
-   <%= f.input :fax, :input_html => {:size => 30}, :label => (t "global.fax") %>
-   <%= f.input :notes, :input_html => {:rows => 15}, :label => (t "global.notes") %>
-   <% if can? :manage, :all %>
-   <div class="input">
-     <label class="string optional" for="user_role">Role</label>
-     <%= f.collection_select :role,  User::ROLES, :to_s, :humanize %>
-   </div>
-   <% end %>
-
-   <%= hidden_field_tag "user[edited_at]", Time.now %>
-   <%= hidden_field_tag "user[edited_by]", current_user.username %>
-<%= f.submit %>
-<% end %>
+<div id="ddtabs1" class="basictab">
+  <ul>
+    <li><a href="#<%= t "users.tab.user_type" %>" rel="tab1"><%= t "users.tab.user_type" %></a></li>
+    <li><a href="#<%= t "users.tab.contact_info" %>" rel="tab2"><%= t "users.tab.contact_info" %></a></li>
+    <li><a href="#<%= t "global.tab.notes" %>" rel="tab3"><%= t "global.tab.notes" %></a></li>
+    <li><a href="#<%= t "users.tab.permissions" %>" rel="tab4"><%= t "users.tab.permissions" %></a></li>
+  </ul>
+</div>
+<div class="tabcontainer">
+  <div id="tab1" class="tabcontent">
+      <%= simple_form_for(@user) do |f| %>
+          <%= f.error_notification %>
+          <%= f.input :username, :label => (t "user.username") %>
+          <%= f.input :name, :hint =>(t "user.name_eg"), :label =>(t "user.name") %>
+          <%= f.input :password, :input_html => {:autocomplete => 'off'}, :required => true, :label => (t "user.password") %>
+          <%= f.input :password_confirmation, :input_html => {:autocomplete => 'off'}, :label => (t "user.password_confirmation"), :required => true %>
+          <%= f.input :email, :label => (t "global.email") %>
+          <%= hidden_field_tag "user[edited_at]", Time.now %>
+          <%= hidden_field_tag "user[edited_by]", current_user.username %>
+          <%= f.submit %>
+      <% end %>
+  </div>
+<div id="tab2" class="tabcontent">
+      <%= simple_form_for(@user) do |f| %>
+          <%= f.input :phone, :input_html => {:size => 30}, :label => (t "global.phone") %>
+          <%= f.input :mobile, :input_html => {:size => 30}, :label => (t "global.mobile") %>
+          <%= f.input :fax, :input_html => {:size => 30}, :label => (t "global.fax") %>
+          <%= f.input :address, :input_html => {:rows => 5}, :label => (t "global.address") %>
+          <%= f.input :city, :input_html => {:size => 30}, :label => (t "global.city") %>
+          <%= f.input :state, :input_html => {:size => 30}, :label => (t "global.state") %>
+          <%= f.input :zip, :input_html => {:size => 30}, :label => (t "global.zip") %>
+          <%= hidden_field_tag "user[edited_at]", Time.now %>
+          <%= hidden_field_tag "user[edited_by]", current_user.username %>
+          <%= f.submit %>
+      <% end %>
+  </div>
+<div id="tab3" class="tabcontent">
+      <%= simple_form_for(@user) do |f| %>
+          <%= f.input :notes, :input_html => {:rows => 15}, :label => (t "global.notes") %>
+          <%= hidden_field_tag "user[edited_at]", Time.now %>
+          <%= hidden_field_tag "user[edited_by]", current_user.username %>
+          <%= f.submit %>
+      <% end %>
+  </div>
+  <% if can? :manage, :all %>
+  <div id="tab4" class="tabcontent">
+      <%= simple_form_for(@user) do |f| %>
+        <div class="input">
+                <label class="string optional" for="user_role">Role</label>
+                <%= f.collection_select :role, User::ROLES, :to_s, :humanize %>
+              </div>
+          <%= f.input :employee, :as => :radio, :hint => (t "user.hint.employed" ),  :label => (t "user.employed")   %>
+          <%= f.input :client, :as => :radio, :hint => (t "user.hint.client" ),:label => (t "user.client")  %>
+          <%= f.input :workorder_assignability, :as => :radio, :hint => (t "user.hint.assignable" ),:label => (t "user.assignable") %>
+          <%= hidden_field_tag "user[edited_at]", Time.now %>
+          <%= hidden_field_tag "user[edited_by]", current_user.username %>
+          <%= f.submit %>
+      <% end %>
+  </div>
+  <% end %>
 </div>
