--- a/app/views/work_orders/_new_wo_tab.html.erb
+++ b/app/views/work_orders/_new_wo_tab.html.erb
@@ -13,7 +13,7 @@
   <tr align="left" valign="top" class="priority_main_<%= new_wo.priority_list.id %>">
     <td align="center"><%= link_to(new_wo.id, new_wo) %></td>
     <td align="center"><%= new_wo.priority_list.name %></td>
-    <td align="center"><%= new_wo.user.username %></td>
+    <td align="center"><%= link_to(new_wo.user.name, user_path(new_wo.user.id) )%></td>
     <td><%= truncate(new_wo.subject, :length => 75) %></td>
     <td><%= l new_wo.created_at, :format => :medium %> by <%=h new_wo.created_by %></td>
     <td><%= l new_wo.updated_at, :format => :medium %> by <%=h new_wo.created_by %></td>
