--- a/app/views/work_orders/_new_wo_tab.html.erb
+++ b/app/views/work_orders/_new_wo_tab.html.erb
@@ -21,7 +21,11 @@
     <td width="120" align="center"><%= link_to(image_tag('view.png', :title => [t "global.view"]), work_order_path(new_wo.id) )%>&nbsp;
         <%= link_to(image_tag('edit.png', :title => [t "global.edit"]), edit_work_order_url(new_wo.id)) %>&nbsp;
         <%= link_to(image_tag('printer.png', :title => [t "global.print"]), work_order_path(new_wo.id,:format => 'pdf'))%>&nbsp;
-        <%= link_to(image_tag('delete.png', :title => [t "global.delete"]), work_order_path(new_wo.id), :confirm => 'Are you sure?', :method => :delete ) %>
+      <% if can? :destroy, @work_orders %>
+          <%= link_to(image_tag('delete.png', :title => [t "global.delete"]), work_order_path(new_wo.id), :confirm => 'Are you sure?', :method => :delete ) %>
+          <% else %>
+          <%= link_to(image_tag('tick.png', :title => [t "global.close"]), close_path(new_wo.id))%>&nbsp;
+      <% end %>
     </td>
   </tr>
 <% end %>
