--- a/app/views/work_orders/_assigned_wo_tab.html.erb
+++ b/app/views/work_orders/_assigned_wo_tab.html.erb
@@ -1,13 +1,11 @@
 <table width="100%" cellspacing="0" >
   <tr> <!--mytodo: add translation-->
     <th><%= "WO #" %></th>
+    <th><%= "Priority" %></th>
     <th><%= "Client" %></th>
     <th><%= "Subject" %></th>
-    <th><%= "Description" %></th>
-    <th><%= "Priority" %></th>
-    <th><%= "Created at" %></th>
-    <th><%= "Created by" %></th>
-    <th><%= "Last Updated" %></th>
+    <th><%= "Created" %></th>
+    <th><%= "Updated" %></th>
     <th><%= "Assigned To" %></th>
     <th><%= "Actions" %></th>
   </tr>
@@ -16,20 +14,12 @@
 <% @assigned_work_orders.each do |assigned_wo| %>
   <tr align="left" class="priority_main_<%= assigned_wo.priority_list.id %>">
     <td><%= link_to(assigned_wo.id, assigned_wo) %></td>
+    <td><%=h assigned_wo.priority_list.name %></td>
     <td><%= link_to(assigned_wo.user.username, user_path(assigned_wo.user_id)) %></td>
     <td><%=h assigned_wo.subject %></td>
-    <td><%=h assigned_wo.description %></td>
-    <td><%=h assigned_wo.priority_list.name %></td>
-    <td><%=h l assigned_wo.created_at, :format => :medium %></td>
-    <td><%=h assigned_wo.created_by %></td>
-    <td><%=h l assigned_wo.updated_at, :format => :medium %></td>
-        <!--mytodo : possible database performance issues as it hist the DB for every record. maybe just add username instead. or create a join model-->
-        <% if assigned_wo.assigned_to_username ||= nil %>
-            <% @assigned = User.find(:first, :select => "username", :conditions => ["id = ?", assigned_wo.assigned_to_username]) %>
-            <td><%= @assigned.username %></td>
-        <% else %>
-    <td></td>
-        <% end %>
+    <td><%=h l assigned_wo.created_at, :format => :medium %>&nbsp;<%= t "global.by" %>&nbsp;<%= assigned_wo.created_by %></td>
+    <td><%=h l assigned_wo.updated_at, :format => :medium %>&nbsp;<%= t "global.by" %>&nbsp;<%= assigned_wo.edited_by %></td>
+    <td><%=h assigned_wo.assigned_to_username %></td>
     <td align="center" ><%= link_to(image_tag('view.png', :title => [t "global.view"]), work_order_path(assigned_wo.id) )%>&nbsp;
         <%= link_to(image_tag('printer.png', :title => [t "global.print"]), work_order_path(assigned_wo.id,:format => 'pdf'))%>&nbsp;
         <%= link_to(image_tag('edit.png', :title => [t "global.edit"]), edit_work_order_url(assigned_wo.id)) %>&nbsp;
