--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -19,6 +19,11 @@
 <div id="user_nav" class="menu">
   <%= render_navigation %>
 </div>
+<div id="top_float_right">
+  <% if logged_in?  %>
+    <%= t "global.currently_logged_in_as" %>&nbsp;<%= current_user.name %>
+      <% end %>
+  </div>
 <div id="container">
   <div id="yield">
     <%- flash.each do |name, msg| -%>
